# sub-convert

./: .gitignore  README.md  config.example.yaml  pyproject.toml  template.example.yaml
examples/: remote-subscription.example.yaml  sing-box-server.example.json
src/sub_convert/: __init__.py  main.py
src/sub_convert/api/: errors.py  routes.py
src/sub_convert/config/: __init__.py  loader.py  models.py
src/sub_convert/converters/: __init__.py  base.py  registry.py  vless.py
src/sub_convert/mihomo/: __init__.py  models.py  renderer.py
src/sub_convert/singbox/: __init__.py  models.py  reader.py
src/sub_convert/subscriptions/: __init__.py  loader.py  service.py
tests/: test_config.py  test_converters.py  test_renderer.py  test_service_api.py
