[project]
name = "sub-convert"
version = "0.1.0"
description = "Generate Mihomo subscriptions from sing-box server configurations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_convert"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

